apps/oxlint/src/snapshots/_--no-error-on-unmatched-pattern foo.asdf@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --no-error-on-unmatched-pattern foo.asdf
working directory: 
----------
Finished in <variable>ms on 0 files with 97 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
