apps/oxlint/src/snapshots/_--type-aware test.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware test.ts
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 102 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
