apps/oxlint/src/snapshots/_-A all --print-config@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -A all --print-config
working directory: 
----------
{
  "plugins": [
    "unicorn",
    "typescript",
    "oxc"
  ],
  "categories": {},
  "rules": {},
  "settings": {
    "jsx-a11y": {
      "polymorphicPropName": null,
      "components": {}
    },
    "next": {
      "rootDir": []
    },
    "react": {
      "version": null,
      "formComponents": [],
      "linkComponents": [],
      "componentWrapperFunctions": []
    },
    "jsdoc": {
      "ignorePrivate": false,
      "ignoreInternal": false,
      "ignoreReplacesDocs": true,
      "overrideReplacesDocs": true,
      "augmentsExtendsReplacesDocs": false,
      "implementsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "tagNamePreference": {}
    }
  },
  "env": {
    "builtin": true
  },
  "globals": {},
  "ignorePatterns": []
}
----------
CLI result: PrintConfigResult
----------
