apps/oxlint/src/snapshots/_foo.asdf@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: foo.asdf
working directory: 
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files with 97 rules using 1 threads.
----------
CLI result: LintNoFilesFound
----------
